--- a/i18n/es_MX.po
+++ b/i18n/es_MX.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-17 16:21+0000\n"
-"PO-Revision-Date: 2020-12-17 10:34-0600\n"
+"POT-Creation-Date: 2021-01-13 22:34+0000\n"
+"PO-Revision-Date: 2021-01-13 16:41-0600\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -132,6 +132,21 @@ msgid "Created on"
 msgstr "Creado el"
 
 #. module: marvelfields
+#: model:ir.ui.menu,name:marvelfields.dashboard_sale_order_menu
+msgid "Dashboard"
+msgstr "Tablero"
+
+#. module: marvelfields
+#: model_terms:ir.ui.view,arch_db:marvelfields.dashboard_sale_order_tree_view
+msgid "Dashboard Sale Tree"
+msgstr ""
+
+#. module: marvelfields
+#: model:ir.actions.act_window,name:marvelfields.dashboard_sale_order_action
+msgid "Dashboard Sales"
+msgstr "Tablero de Ventas"
+
+#. module: marvelfields
 #: model:ir.model.fields,field_description:marvelfields.field_stock_picking__delivery_cost
 msgid "Delivery cost"
 msgstr "Costo de envio"
@@ -149,6 +164,11 @@ msgstr ""
 #: model:ir.model.fields,field_description:marvelfields.field_product_temporary__display_name
 msgid "Display Name"
 msgstr "Nombre mostrado"
+
+#. module: marvelfields
+#: model_terms:ir.ui.view,arch_db:marvelfields.dashboard_sale_order_tree_view
+msgid "Fecha de Cotizacion"
+msgstr ""
 
 #. module: marvelfields
 #: model:ir.model.fields,field_description:marvelfields.field_product_product__high
@@ -170,6 +190,12 @@ msgstr ""
 #: model:ir.model,name:marvelfields.model_stock_location
 msgid "Inventory Locations"
 msgstr "Ubicaciones de inventario"
+
+#. module: marvelfields
+#: model:ir.model.fields,field_description:marvelfields.field_product_product__is_on_catalogue
+#: model:ir.model.fields,field_description:marvelfields.field_product_template__is_on_catalogue
+msgid "Is on Catalogue"
+msgstr "en catalogo"
 
 #. module: marvelfields
 #: model:ir.model.fields,field_description:marvelfields.field_marvelfields_clasificaciones____last_update
@@ -199,6 +225,13 @@ msgid "Last Updated on"
 msgstr "Última actualización el"
 
 #. module: marvelfields
+#: model:ir.actions.server,name:marvelfields.ir_cron_last_incomming_date_ir_actions_server
+#: model:ir.cron,cron_name:marvelfields.ir_cron_last_incomming_date
+#: model:ir.cron,name:marvelfields.ir_cron_last_incomming_date
+msgid "Last incomming date"
+msgstr ""
+
+#. module: marvelfields
 #: model:ir.model.fields,field_description:marvelfields.field_product_product__length
 #: model:ir.model.fields,field_description:marvelfields.field_product_template__length
 #: model_terms:ir.ui.view,arch_db:marvelfields.marvel_product_template_form_view_inherit
@@ -216,6 +249,11 @@ msgstr "Nombre"
 #: model:ir.model.fields,field_description:marvelfields.field_res_users__ncliente
 #: model_terms:ir.ui.view,arch_db:marvelfields.view_nocliente_form_inherit
 msgid "Numero de Cliente"
+msgstr ""
+
+#. module: marvelfields
+#: model_terms:ir.ui.view,arch_db:marvelfields.dashboard_sale_order_tree_view
+msgid "Numero de Presupuesto"
 msgstr ""
 
 #. module: marvelfields
